--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer base {
+  @font-face{
+    font-family: "WinkyRough";
+    src: url('../public/assets/fonts/winkyrough/WinkyRough-Medium.ttf')
+    format("truetype");
+  }
+}
