Realizado el pagination falta las ultimas dos partes para implementar el cache

--- a/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -17,3 +17,9 @@
 
   <!-- </div> -->
 </div>
+
+<pagination
+[pages]="productsResource.value()?.pages ?? 0"
+[courrentPage]="PaginationService.courrentPage()"
+/>
+
