--- a/src/app/store-front/pages/home-page/home-page.component.html
+++ b/src/app/store-front/pages/home-page/home-page.component.html
@@ -1,5 +1,10 @@
-<h1 class="text-3xl font-bold font-winky">Todos los Productos</h1>
+<h1 class="text-3xl font-bold font-winky">Todos los Productos </h1>
 <h2 class="text-xl mt-5">Para todos los gustos</h2>
+
+<pagination
+[pages]="productsResource.value()?.pages ?? 0"
+[courrentPage]="PaginationService.courrentPage()"
+/>
 
 
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-2 gap-3">
@@ -13,6 +18,12 @@
   <!-- VACIO -->
 
 </div>
+
+
+<pagination
+[pages]="productsResource.value()?.pages ?? 0"
+[courrentPage]="PaginationService.courrentPage()"
+/>
 
 
 
