--- a/src/app/products/components/product-carousel/product-carousel.component.html
+++ b/src/app/products/components/product-carousel/product-carousel.component.html
@@ -11,7 +11,9 @@
     @for(image of images(); track $index){
 
       <div class="swiper-slide">
-        <img [src]="image | productImage" alt="Producto" class="w-full object-cover">
+        <img [src]="image | productImage"
+        alt="Producto"
+        class="w-full object-cover animate-fadeIn">
 
       </div>
     }
